Fix build and improve bubble menu on mobile

--- a/app/styles/_components/VideoDebate/action_bubble_menu.sass
+++ b/app/styles/_components/VideoDebate/action_bubble_menu.sass
@@ -12,8 +12,14 @@ $sub-bubble-icon-size: 24px
   bottom: $bubble-margin
   position: absolute
   z-index: 99
-  &:not(.active) .action-bubble:not(:first-child)
+  &:not(:hover) .action-bubble:not(:first-child)
     display: none
+  &:hover .label
+    @media(pointer: coarse)
+      display: block
+    @media(pointer: none)
+      display: block
+
 
 .action-bubble
   height: $main-bubble-height
@@ -46,18 +52,18 @@ $sub-bubble-icon-size: 24px
     height: $default-bubble-icon-size
     width: $main-bubble-height
     text-align: center
-    padding-top: ($main-bubble-height / 2) - ($default-bubble-icon-size / 2.5)
+    padding-top: ($main-bubble-height / 2) - ($default-bubble-icon-size / 2.75)
     i
       transition: transform 0.3s
 
 .action-bubble:not(.activated)
   background: $grey-light
 
-.action-bubble-container:not(.active):not(.hasForm) .action-bubble:first-child i
+.action-bubble-container:not(:hover):not(.active):not(.hasForm) .action-bubble:first-child i
   transform: rotate(-360deg)
   @extend .icon-plus
   $plus-sign-size: $default-bubble-icon-size + 12
-  padding-top: ($main-bubble-height / 2) - ($plus-sign-size / 1.6)
+  padding-top: ($main-bubble-height / 2) - ($plus-sign-size / 1.5)
   &:before
     font-size: $plus-sign-size
 
